plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'br.usp.ime'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.1'
	implementation group: 'io.mongock', name: 'mongock-springboot-v3', version: '5.4.4'
	implementation group: 'io.mongock', name: 'mongodb-springdata-v4-driver', version: '5.4.4'
	implementation group: 'io.mongock', name: 'mongock-springboot-junit5', version: '5.5.0'
	implementation('org.springframework.boot:spring-boot-starter-validation')
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testAndDevelopmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.20.2'
	testImplementation group: 'org.testcontainers', name: 'mongodb', version: '1.20.2'
}

dependencyManagement {
	overriddenByDependencies = false
	imports {
		mavenBom "io.mongock:mongock-bom:5.4.0"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs("-XX:+EnableDynamicAgentLoading")
}

